--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" type="text/css" href="./assets/style.css"/>
     </head>
     <body>
+        <!--Header and Navigation for portfolio-->
         <header>
             <h1> Thomas Fredrick Carlson</h1>
             <img src="./images/slack pic.JPG" alt="Slack Picture">
@@ -21,9 +22,11 @@
         </header>
 </nav>
      <main>
+        <!--Sections showing my background, projects, and contact information-->
         <section>
         <section class="About-Me">
                 <section id ="About-Me">
+                <!--About me section with image references-->
                   <h2>About Me</h2>
                   <p>My name is Tom Carlson, and I am currently in the process of receivng a coding certifcate from KU.</p>
                   <p>I started this coding bootcamp back on September 6th of 2022, and I came into this bootcamp without much coding experience.</p>
@@ -37,6 +40,7 @@
        <section>
         <section class="My-Work">
             <section id="My-Work">
+                <!--My work section with images and references to my current projects-->
             <h2>My Work</h2>
              <p>On the Horiseon project, I was able to modify the HTML code in order for the website to be more accessible by adding semantic elements.</p>
              <h2><a href=https://tcstl95.github.io/First-Challange/ class="First-Challange">Horiseon</a></h2>
@@ -48,6 +52,7 @@
         </section>
 
          <section class="Contact">
+            <!--Section containg my contact information-->
          <section id="Contact-Me">
                 <h2>Contact Me</h2>
                 <ul>
