Added link to project 2

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
              <h2><a href=https://tcstl95.github.io/First-Challange/ class="First-Challange">Horiseon</a></h2>
              <img src="./images/Horiseon Screenshot.png" class= "Horiseon-Img" alt="Horiseon Picture">
             <p>I have also been working on a side project regarding memes in order to work on my CSS and HTML skills.</p>
-            <h2><a href=https://tcstl95.github.io/idk-project/ class="Practice-Project">Practice Project</a></h2>
-             <img src="./images/practice screenshot.png" class="Practice-Img" alt="Practice project picture">
+            <h2><a href=https://murmuring-falls-16869.herokuapp.com/ class="Projet 2"> Project 2</a></h2>
+            
             </section>
         </section>
 
